--- a/app/views/spree/order_mailer/production_order_email.html.slim
+++ b/app/views/spree/order_mailer/production_order_email.html.slim
@@ -28,9 +28,7 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
                   tr
                     th Size (码数):
                     td
-                      = order.country_code
-                      ' -
-                      = item.size
+                      = item.country_size
 
                   tr
                     th Color（颜色):
