[fix][views] replace spree template with redesign

--- a/app/views/spree/layouts/spree_application.html.slim
+++ b/app/views/spree/layouts/spree_application.html.slim
@@ -1,54 +1,1 @@
-doctype html
-= conditional_html do
-  head
-    = render 'layouts/head'
-    = csrf_meta_tags
-    - if !Rails.env.development?
-      = render 'spree/shared/google_analytics'
-      = render '/shared/zopim'
-
-    = render '/shared/canonical'
-
-    - if content_for?(:payment_gateway)
-      = yield :payment_gateway
-  body class="ecommerce #{controller_action_class}" id=(controller_action_id)
-    #fb-root
-    - if facebook_application.present?
-      javascript:
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '#{facebook_application.api_key}',
-            version    : 'v2.0',
-            status     : true,
-            xfbml      : true
-          });
-        };
-
-        (function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=#{facebook_application.api_key}";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
-    - if spree_user_signed_in? and session['show_quiz'] and session.delete('show_quiz')
-      javascript:
-        window.Quiz.autoShow = true;
-    #wrap
-      - unless controller_action_id == 'checkout' || controller_action_id == 'girlfriendxfame'
-        = render('layouts/header')
-      #content
-        - unless controller_action_id == 'checkout'
-          - unless sale_active?
-            = marketing_banner
-          - else
-            = render 'shared/sale_banner'
-        = yield
-      = render 'shared/payment_request_popup'
-      #push
-    = render 'layouts/footer'
-
-    = render 'shared/remarketing_tag'
-    - cache [:layout, :head, :colors], expires_in: configatron.cache.expire.long do
-      = render 'shared/dynamic_color_styles'
+= render template: 'layouts/redesign/application'
