--- a/app/views/spree/shared/unauthorized.html.erb
+++ b/app/views/spree/shared/unauthorized.html.erb
@@ -1,4 +1,4 @@
 <div class="wrap">
   <h1 class="block-title"><%= t(:access_denied) %></h1>
-  <h2 class="subtitle">Sorry, you're not allowed to visit the page</h2>
+  <h2 class="subtitle">Sorry, you're not allowed to visit that page</h2>
 </div>
