--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -20,5 +20,10 @@
     .progress-bar
       .filler style="width: 0%;"
         .tooltip 0%
+    .questions-count
+      ' Q
+      span.current 1
+      | /
+      span.total = @quiz.questions.map(&:step).uniq.count + 1
     .next
       a href="#" Next
