--- a/app/assets/stylesheets/partials/_quiz.css.scss
+++ b/app/assets/stylesheets/partials/_quiz.css.scss
@@ -1,8 +1,28 @@
+// Setup 
+$tablet: "(max-width: 768px)";
+$tablet-mini: "(max-width: 600px)";
+$phone: "(max-width: 500px)";
 @import url(//fonts.googleapis.com/css?family=Forum);
+body { margin: 0;}
 
-body {
-  margin: 0;
+.hidden {
+  display: none;
 }
+
+.hidden-on-phone {
+  @media #{$phone} { display: none;}
+}
+.visible-on-phone {
+  display: none;
+  @media #{$phone} { 
+    display: block;
+  }
+}
+span.visible-on-phone, em.visible-on-phone {
+  @media #{$phone} { display: inline;}
+}
+// @end Setup
+// -----------------
 
 .quiz-box .quiz-overlay {
   background: #000;
@@ -26,12 +46,14 @@ body {
 
 .quiz-wrapper-box {
   max-width: 1100px;
-  min-width: 560px;
   margin-left: auto;
   margin-right: auto;
   min-height: 680px;
   background: #fff;
   z-index: 31;
+  @media #{$phone} {
+    min-height: 0;
+  }
   
   .close-quiz {
     position: absolute;
@@ -61,11 +83,16 @@ body {
     height: 680px;
     padding: 22px 20px 85px;
     position: relative;
-    @media (max-width: 600px) {
+    @include box-sizing(border-box);
+    @media #{$tablet-mini} {
       padding-left: 10px;
       padding-right: 10px;
     }
-    @include box-sizing(border-box);
+    @media #{$phone} {
+      height: 417px;
+      padding-top: 0;
+      padding-bottom: 40px;
+    }
   }
   .signup-box-wrapper {
     width: 1100px;
@@ -75,6 +102,9 @@ body {
     background-size: cover;
     margin: -42px -20px -85px;
     position: relative;
+    @media #{$phone} {
+      padding-bottom: -40px;
+    }
     .facebook-button {
       display: block;
       text-align: center;
@@ -304,6 +334,9 @@ body {
       line-height: 35px;
       white-space: nowrap;
       text-align: center;
+      @media #{$phone} {
+        display: none;
+      }
     }
     h1 {
       font: 400 47px/0.8 $fontThree;
@@ -314,6 +347,11 @@ body {
         text-transform: none;
         display: block;
         font-family: $fontTwo;
+      }
+      @media #{$phone} {
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 25px;
       }
     }
     .subtitle {
@@ -327,6 +365,12 @@ body {
         padding: 5px 20px;
         color: #fff;
         background-color: #000;
+        @media #{$phone} {
+          margin-top: 10px;
+          padding-left: 10px;
+          padding-right: 10px;
+          font-size: 18px;
+        }
       }
     }
     .photos-wrapper {
@@ -334,13 +378,16 @@ body {
       height: 425px;
       overflow: hidden;
       position: relative;
+      @media #{$phone} {
+        height: 270px;
+      }
       .loader {
         position: absolute;
         left: 0;
         top: 0;
         right: 0;
-        height: 425px;
-        background: url('_quiz/loader.gif') no-repeat center 150px rgba(255, 255, 255, 0.8);
+        bottom: 0;
+        background: url('_quiz/loader.gif') no-repeat center center rgba(255, 255, 255, 0.8);
         display: none;
       }
       .photos-nav {
@@ -355,6 +402,7 @@ body {
           text-align: center;
           padding-top: 15px;
           font: 100 italic 14px/1 $fontThree; 
+          @media #{$phone} { text-align: right;}
         }
         &:before, &:after {
           content: '';
@@ -391,6 +439,22 @@ body {
           height: 20px;
           margin-left: 10px;
         }
+        .icon-hr-right {
+          padding-left: 8px;
+          margin-left: 5px;
+          position: relative;
+          &:after {
+            content: '';
+            background-color: #000;
+            display: block;
+            height: 1px;
+            position: absolute;
+            left: 0;
+            right: 4px;
+            top: 50%;
+            // margin-top: -1px;
+          }
+        }
       }
     }
     .scrollable {
@@ -398,21 +462,34 @@ body {
       height: 100%;
       overflow-x: hidden;
       overflow-y: scroll;
+      @media #{$phone} {
+        height: auto !important;
+        overflow-x: scroll !important;
+        overflow-y: hidden !important;
+        -webkit-overflow-scrolling: touch;
+      }
     }
     .photos {
       padding-bottom: 42px;
+      @media #{$phone} {
+        white-space: nowrap;
+        width: 100%;
+        height: auto !important;
+        padding-bottom: 0;
+      }
       .item {
         margin-bottom: 10px;
-        height: auto;
-        
+        height: auto;        
         width: 13.4333%;
-
-        @media (max-width: 900px) {
-          width: 15%;
+        @media #{$phone} {
+          margin-right: 10px;
+          display: inline-block;
+          vertical-align: top;
+          position: relative !important;
+          top: auto !important;
+          left: auto !important;
         }
-
         &.active {
-
           .selected { display: block;}
         }
         img {
@@ -446,6 +523,7 @@ body {
     }
     .choices {
       font-size: 0;
+      @media #{$phone} { text-align: center;}
       .item {
         display: inline-block;
         vertical-align: top;
@@ -455,8 +533,14 @@ body {
         margin-top: 70px;
         font-size: 30px;
         font-family: $fontThree;
-        @media (max-width: 600px) {
+        @media #{$tablet-mini} {
           font-size: 25px;
+        }
+        @media #{$phone} {
+          margin-top: 20px;
+          width: auto;
+          padding-left: 5px;
+          padding-right: 5px;
         }
         input[type=checkbox], input[type=radio] { display: none;}
         label {
@@ -540,11 +624,17 @@ body {
         }
       }
     }
+    .chart-wrapper {
+      @media #{$phone} {
+        overflow-y: scroll; 
+        -webkit-overflow-scrolling: touch;
+      }
+    }
     .chart {
       font-size: 0;
       margin-top: 80px;
       white-space: nowrap;  
-      width: 1060px;  
+      width: 1060px;
       -webkit-transform-origin: 0 0;
          -moz-transform-origin: 0 0;
           -ms-transform-origin: 0 0;
@@ -650,10 +740,16 @@ body {
       bottom: 20px;
       left: 20px;
       right: 20px;
+      @media #{$phone} {
+        left: 0;
+        right: 0;
+      }
+
       .progress-bar {
         border: solid 1px #000;
         background-color: #fff;
         height: 34px;
+        @media #{$phone} { display: none;}
         .filler {
           position: relative;
           text-align: right;
@@ -664,6 +760,13 @@ body {
             font: 400 23px/34px $fontThree;
           }
         }
+      }
+      .questions-count {
+        display: none;
+        top: 0;
+        left: 50%;
+        margin-left: -42px;
+        @media #{$phone} { display: block;}
       }
       .prev, .next {
         text-align: center;
@@ -821,6 +924,10 @@ body {
     height: 430px;
     position: relative;
     margin: 45px auto 0;
+    @media #{$phone} {
+      height: 230px;
+      margin-top: 25px;
+    }
     .choose-friends {
       width: 338px;
       height: 138px;
@@ -830,16 +937,25 @@ body {
       margin: -70px 0 0 -170px;
       border: solid 1px #d7d7d7;
       text-align: center;
+      @media #{$phone} {
+        left: 10px;
+        margin-left: 0;
+        right: 10px;
+        width: auto;
+      }
       .choose-friends-link{
         margin-top: 55px;
       }
     }
-    .skip{
+    .skip {
       position: absolute;
       width: 100%;
       top: 330px;
       text-align: center;
       z-index: 1000;
+      @media #{$phone} {
+        top: 200px;
+      }
       a{
         font-size: 14px;
       }
@@ -1409,14 +1525,22 @@ body {
   text-align: center;
   margin: -25px 0 0;
   padding: 0;
+  @media #{$phone} {
+    margin-top: -10px;
+  }
   &.heir {
     .selected {
       background: url('_quiz/choice-type-3.png') no-repeat 115% center;
+      background-size: cover;
+      @media #{$phone} {
+        background-position: 0% center;
+      }
     }
   }
   &.body-colour {
     .selected {
       background: url('_quiz/choice-type-2.png') no-repeat center center;
+      background-size: cover;
     }
   }
   li {
@@ -1426,6 +1550,15 @@ body {
     height: 101px;
     margin: 0 12px;
     position: relative;
+    @media #{$phone} {
+      width: 50px;
+      height: 50px;
+      margin: 5px;
+    }
+    img { 
+      width: 100%;
+      height: auto;
+    }
     &.active {
       .selected {
         display: block;
@@ -1445,7 +1578,7 @@ body {
     left: 0;
     top: 0;
     right: 0;
-    height: 101px;
+    bottom: 0;
   }
 }
 
@@ -1460,6 +1593,11 @@ body {
     display: inline-block;
     vertical-align: top;
     position: relative;
+    @media #{$phone} {
+      margin-left: 4px;
+      margin-right: 4px;
+      min-width: 70px;
+    }
     &.active {
       .selected { display: block;}
     }
@@ -1639,12 +1777,19 @@ $quiz-result-gutter-sm: 10px;
   text-align: center;
   margin-bottom: $quiz-result-gutter;
   color: #fff;
-  @media (max-width: 768px) {
+  @media #{$tablet} {
     margin-bottom: $quiz-result-gutter-sm;
+  }
+  @media #{$tablet} {
+    height: 50px;
   }
   .logo {
     width: 320px;
     margin-top: 22px;
+    @media #{$phone} { 
+      width: 250px;
+      margin-top: 16px;
+    }
   }
 }
 .quiz-results-wrapper {
@@ -1652,9 +1797,13 @@ $quiz-result-gutter-sm: 10px;
     margin-left: -$quiz-result-gutter;
     margin-right: -$quiz-result-gutter;
     box-sizing: border-box;
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       margin-left: -$quiz-result-gutter-sm;
       margin-right: -$quiz-result-gutter-sm;
+    }
+    @media #{$phone} {
+      margin-left: 0;
+      margin-right: 0;
     }
     &:after {
       content: ' ';
@@ -1668,12 +1817,18 @@ $quiz-result-gutter-sm: 10px;
     position: relative;
     float: left;
     box-sizing: border-box;
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       padding: $quiz-result-gutter-sm;
     }
   }
-  .quiz-col-6 { width: (100% / 2);}
-  .quiz-col-4 { width: (100% / 3);}
+  .quiz-col-6 { 
+    width: (100% / 2);
+    @media #{$phone} { width: 100%;}
+  }
+  .quiz-col-4 { 
+    width: (100% / 3);
+    @media #{$phone} { width: 100%;}
+  }
 
   .dress-catalog {
     text-align: center;
@@ -1719,28 +1874,28 @@ $quiz-result-gutter-sm: 10px;
   .quiz-result-2 {
     padding-top: 0;
     padding-bottom: ($quiz-result-gutter * 3/2);
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       padding-bottom: ($quiz-result-gutter-sm * 3/2);
     }
   }
   .quiz-result-3 {
     padding-top: 0;
     padding-bottom: ($quiz-result-gutter * 3/2);
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       padding-bottom: ($quiz-result-gutter-sm * 3/2);
     }
   }
   .quiz-result-4 {
     padding-top: ($quiz-result-gutter * 3/2);
     padding-bottom: 0;
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       padding-top: ($quiz-result-gutter-sm * 3/2);
     }
   }
   .quiz-result-5 {
     padding-top: ($quiz-result-gutter * 3/2);
     padding-bottom: 0;
-    @media (max-width: 768px) {
+    @media #{$tablet} {
       padding-top: ($quiz-result-gutter-sm * 3/2);
     }
   }
@@ -1752,11 +1907,15 @@ $quiz-result-gutter-sm: 10px;
   background-color: #f1f1f2;
   text-align: center;
   padding: 50px;
+  @media #{$phone} {
+    padding: 10px;
+  }
   h2 { 
     font-size: 38px;
     text-transform: uppercase;
     font-style: italic;
     font-family: $fontThree;
+    @media #{$phone} { font-size: 30px;}
     small {
       display: block;
       margin-top: 15px;
@@ -1766,12 +1925,18 @@ $quiz-result-gutter-sm: 10px;
     font-size: 22px;
     text-align: justify;
     font-family: $fontTwo;
+    @media #{$phone} { font-size: 20px;}
   }
   .btn {
     height: 52px;
     line-height: 52px;
     padding-left: 80px;
     padding-right: 80px;
+    @media #{$phone} {
+      display: block;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
   }
   .pink-pale {
     background-color: #eeddf0;
@@ -1786,4 +1951,16 @@ $quiz-result-gutter-sm: 10px;
   }
 }
 // @end Quiz result
+// -----------------
+
+
+
+// vex 
+@media #{$phone} {
+  .gurl_com_modal.email-capture-modal .vex-content { background-position: top center;}
+  .gurl_com_modal.email-capture-modal .vex-content .vex-dialog-form .vex-dialog-message { padding-top: 60px;}
+  .gurl_com_modal.email-capture-modal .vex-content .vex-dialog-form .vex-dialog-message h2 { font-size: 1.4em !important;}
+  .gurl_com_modal.email-capture-modal .vex-content .vex-dialog-form .vex-dialog-message p { font-size: 1em !important;}
+}
+// @end vex
 // -----------------
