[fix][views] remove old header,footer, static template

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,10 +1,1 @@
-= render 'layouts/js_bootstrap'
-- if Rails.env.development? || Rails.env.staging?
-  #dev_console
-
-
-- if @bridesmaid_viewing
-  = render('bridesmaid/shared/header')
-- else
-  /-# default:
-  = render 'layouts/header_regular_navigation'
+= render 'layouts/redesign/header'
