--- a/app/views/layouts/statics.html.slim
+++ b/app/views/layouts/statics.html.slim
@@ -1,49 +1,1 @@
-doctype html
-= conditional_html do
-  head
-    script src="//cdn.optimizely.com/js/2450680664.js"
-    = render 'layouts/head'
-    = csrf_meta_tags
-
-    - unless Rails.env.development?
-      = render 'spree/shared/google_analytics'
-      = render '/shared/zopim'
-    - if @nofollow
-      meta name="ROBOTS" content="NOINDEX, FOLLOW"
-
-    = render '/shared/canonical'
-
-  body class=(controller_action_class) id=(restfull_action_name)
-    #fb-root
-    - if facebook_application.present?
-      javascript:
-        window.fbAsyncInit = function () {
-          FB.init({
-            appId: '#{facebook_application.api_key}',
-            version: 'v2.0',
-            status: true,
-            xfbml: true
-          });
-        };
-
-        (function (d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s);
-          js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=#{facebook_application.api_key}";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
-    #wrap
-      = render 'layouts/header'
-      #content
-        - unless restfull_action_name == 'girlfriendxfame'
-          - unless sale_active?
-            = marketing_banner
-          - else
-            = render 'shared/sale_banner'
-        = yield
-      #push
-    = render 'layouts/footer'
-    = render 'shared/remarketing_tag' unless request.path == "/campaigns/stylecall/thankyou"
+= render template: 'layouts/redesign/application'
