--- a/app/views/statics/fashion_it_girl.html.slim
+++ b/app/views/statics/fashion_it_girl.html.slim
@@ -1,11 +1,11 @@
-div style="margin-left: 20px"
+div
 	.grid-container
-		.grid-3
-		    p style="background-color:#CEB6CB;margin-top:40px;height:159px"
+		.grid-3 style="background-color:#CEB6CB;margin-top:40px;height:159px"
+		    p
 		    	= image_tag('fashion-it-girl/fashion_it_girl_logo_banner.jpg', :alt => 'Fame & Partners and ASOS Present', :height => 164)
 
-		    p style="margin-top:40px; min-height:1000px"
-		    	/ = image_tag('fashion-it-girl/fashion_it_girl_banner.gif', :alt => 'Limited time shop now', :width => 285)
+		    /p style="margin-top:40px; min-height:1000px"
+		    /	 = image_tag('fashion-it-girl/fashion_it_girl_banner.gif', :alt => 'Limited time shop now', :width => 285)
 		    	/ = image_tag('fashion-it-girl/fashion_it_girl_sale_banner.gif', :alt => 'Limited time shop now', :width => 285)
 
 		.grid-9
