--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,270 +1,1 @@
-/
-  javascript:
-    gf_pop = "#{cookies[:gf_pop]}"
-
-    if (gf_pop == "show") {
-      $(document).ready(function(){
-        setTimeout(openpop, 20000);
-      });
-    };
-    
-    function openpop(){
-      popup = new window.popups.GirlfriendPop();
-      popup.show(1)
-    }
-
-- unless controller_action_id == "index"
-  = render "shared/featured_in", :locals => {:small => "_small"}
-footer.footer-global
-  .container
-    - footer_links_cache_key = [:layout, :footer, 'footer-links']
-    - cache footer_links_cache_key, expires_in: configatron.cache.expire.long do
-      = render 'shared/newsletter_signup' 
-      nav.nav-footer
-        .footer-links
-          p.footer-label
-            ' ABOUT US
-          ul
-            li = link_to 'The Fame Team', about_us_path
-            li = link_to 'WHY SHOP WITH US', why_us_path
-            li = link_to 'The Fame CHAIN', fame_chain_path 
-            li = link_to 'Fashionista Winner 2014', fashionista_winner_path
-        .footer-links
-          p.footer-label
-            ' CUSTOMER SERVICE
-          ul
-            li = link_to 'FAQs', faqs_path
-            li = link_to 'TERMS', terms_path
-            li = link_to "Get Styling Advice", style_consultation_path
-        /
-          # TODO: Resinstate after tv spot traffic
-          - if spree_user_signed_in?
-          .footer-links
-            p.footer-label
-              ' MY ACCOUNT
-            ul
-              li = link_to 'WISHLIST', wishlist_path
-              li = link_to 'ORDERS', user_orders_path
-              li = link_to 'style profile', styleprofile_path
-        .footer-links
-          p.footer-label
-            ' FOLLOW US
-
-          ul.social-links
-            li
-              = link_to configatron.links.facebook, target: :blank, class: 'facebook' do
-                i.icon-facebook
-            li
-              = link_to configatron.links.pinterest, target: :blank, class: 'pinterest' do
-                i.icon-pinterest
-            li
-              = link_to configatron.links.instagram, target: :blank, class: 'instagram' do
-                i.icon-instagram
-            li
-              = link_to configatron.links.twitter, target: :blank, class: 'twitter' do
-                i.icon-twitter            
-
-    .phone
-      - if current_site_version.is_australia?
-        ' ORDER ON THE PHONE CUSTOMER SERVICE 1300 924 860
-      - else
-        ' ORDER ON THE PHONE CUSTOMER SERVICE 866 527 7797
-          
-    .copy 
-      div.address itemscope="" itemtype="http://schema.org/Organization"
-        meta itemprop="url" content="http://www.fameandpartners.com/" 
-        meta itemprop="logo" content="http://www.fameandpartners.com/images/logo-new.png" 
-        span itemprop="name" Fame & Partners
-        
-        - if current_site_version.is_australia?   
-          div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"
-            span itemprop="streetAddress" Bondi
-            ',  
-            span itemprop="addressLocality" Sydney
-            ',  
-            span itemprop="addressRegion" NSW
-            ',  
-            span itemprop="postalCode" 2026
-            ',  
-            span itemprop="addressCountry" Australia
-                  
-          span itemprop="taxID" ABN 83 162 501 064
-
-        - else        
-        
-          div itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress"
-            span itemprop="streetAddress" 25 Broadway, Floor 9
-            ',  
-            span itemprop="addressLocality" New York
-            ',  
-            span itemprop="addressRegion" NY
-            ',  
-            span itemprop="postalCode" 10004
-            ',
-            span itemprop="addressCountry" USA
-
-            
-                  
-
-
-.hide
-  #what-size
-    .title Easy Size & Measurement Guide
-    .clearfix
-      .fleft.text
-        h6 How to Measure Yourself
-        p Please use a cloth tape measure. Keep the tape measure parallel to the floor and don’t wrap it too tight.
-        p We recommend measuring yourself in your underwear, not over clothing and wearing the same bra (or no bra) that you intend to wear with the dress. We suggest getting a friend to help you if possible & remember to stand with your feet together.
-        
-        h6 Bust
-        p Measure around the fullest part of your bust
-
-        h6 Waist
-        p Measure around your natural waistline. 
-
-        h6 Hips
-        p Measure 20cm below your waistline at the fullest part of your hips.
-
-        h6 Skirt Length
-        p Stand with your heels together, keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
-      .fright
-        = image_tag '_chartsize-popup.jpg'
-    
-    table.table-global
-      thead
-        tr
-          th colspan='3' Sizes
-          th colspan="2" Bust
-          th colspan="2" Waist
-          th colspan="2" Hip
-      tbody
-        tr
-          td.dimension AUS Size
-          td.dimension US Size
-          td.dimension UK Size
-          td.dimension cm
-          td.dimension Inches
-          td.dimension cm
-          td.dimension Inches
-          td.dimension cm
-          td.dimension Inches
-        tr
-          td 4  
-          td 0
-          td 4
-          td 81
-          td 32
-          td 60
-          td 24
-          td 91
-          td 36
-        tr
-          td 6 
-          td 2 
-          td 6 
-          td 84  
-          td 33  
-          td 63  
-          td 25  
-          td 92  
-          td 36
-        tr
-          td 8 
-          td 4 
-          td 8 
-          td 87  
-          td 34  
-          td 66  
-          td 26  
-          td 95  
-          td 37
-        tr
-          td 10  
-          td 6 
-          td 10  
-          td 92  
-          td 36  
-          td 71  
-          td 28  
-          td 100 
-          td 39
-        tr
-          td 12  
-          td 8 
-          td 12  
-          td 97  
-          td 38  
-          td 78  
-          td 31  
-          td 105 
-          td 41
-        tr
-          td 14  
-          td 10  
-          td 14  
-          td 102 
-          td 40  
-          td 85  
-          td 33  
-          td 110 
-          td 43
-        tr
-          td 16  
-          td 12  
-          td 16  
-          td 107 
-          td 42  
-          td 92  
-          td 36  
-          td 115 
-          td 45
-        tr
-          td 18  
-          td 14  
-          td 18  
-          td 112 
-          td 44  
-          td 99  
-          td 39  
-          td 120 
-          td 47
-        tr
-          td 20  
-          td 16  
-          td 20  
-          td 117 
-          td 46  
-          td 106 
-          td 42  
-          td 125 
-          td 49
-        tr
-          td 22  
-          td 18  
-          td 22  
-          td 122 
-          td 48  
-          td 113 
-          td 44  
-          td 130 
-          td 51
-        tr
-          td 24  
-          td 20  
-          td 24  
-          td 128 
-          td 50  
-          td 120 
-          td 47  
-          td 136 
-          td 54
-        tr
-          td 26  
-          td 22  
-          td 26  
-          td 134 
-          td 53  
-          td 127 
-          td 50  
-          td 142 
-          td 56
+= render 'layouts/redesign/footer'
