--- a/app/views/layouts/_head.html.slim
+++ b/app/views/layouts/_head.html.slim
@@ -1,29 +1,1 @@
-title = get_title
-meta name="description" content=(get_meta_description)
-
-link rel="canonical" href=get_canonical_href
-link rel="alternate" hreflang="en-US" href="http://www.fameandpartners.com/"
-link rel="alternate" hreflang="en-AU" href="http://www.fameandpartners.com/au"
-
-= stylesheet_link_tag    'application'
-link rel="stlyesheet" href="https://raw.githubusercontent.com/HubSpot/vex/master/css/vex.css"
-link rel="stlyesheet" href="https://raw.githubusercontent.com/HubSpot/vex/master/css/vex-theme-default.css"
-= javascript_include_tag 'application'
-
-link rel='shortcut icon' type='image/png' href='/favicon.png'
-link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'
-
-meta property="fb:app_id" content="591959187490267"
-- if restfull_action_name == 'girlfriendxfame' || restfull_action_name == 'nye'
-  meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" 
-
-- unless Rails.env.production?
-  meta name="robots" content="noindex, nofollow"
-
-/[if lt IE 9]
-  = javascript_include_tag 'html5.js'
-
-/[if IE]
-  = stylesheet_link_tag 'ie'
-
-= yield :head
+= render 'layouts/redesign/head'
