--- a/app/views/products/search_results/show.html.slim
+++ b/app/views/products/search_results/show.html.slim
@@ -21,27 +21,27 @@ ruby:
 .page-title.default style="background-color:#EDDCEF;"
   .container
     .page-title--details
-      - if @search_collection.any?
+      - if results.any?
         h1.no-padding-bottom Hey!
         p We found the stuff you were looking for.
-      -else
+      - else
         h1.no-padding-bottom Sorry
         p We couldn't find the stuff you were looking for.
 
 .page-content.products-collections.category
   .container.relative.products-collection
-    - if @search_collection.blank?
+    - unless search_performed?
       .row.relative
         .col.col-md-12
           | Um, you need to actually search for something
 
-    - else
-      - if @search_collection.none?
-        .row.relative
-          .col.col-md-12
-            p Don't sweat it. <a href="/dresses">Browse our dresses</a>.          
+    - if results.none?
+      .row.relative
+        .col.col-md-12
+          p Don't sweat it. <a href="/dresses">Browse our dresses</a>.
 
-      - @search_collection.products.each_slice(4) do |products|
+    - else
+      - results.products.each_slice(4) do |products|
         .row.relative
           = render partial: 'products/collections/product', collection: products, as: :product
           .clearfix.visible-sm-block.visible-xs-block
