[chore][validation]: update to terms based on validation

--- a/app/views/statics/_shipping_tables.html.slim
+++ b/app/views/statics/_shipping_tables.html.slim
@@ -1,22 +1,13 @@
-p
-  table.table
-    tr
-      th Item
-      th Australia
-      th U.S.A
-      th Rest of World
-    tr
-      td ON DEMAND, STANDARD DRESS
-      td FREE 7 – 10 Business Days
-      td FREE 7 – 10 Business Days
-      td $30.00 7 – 10 Business Days
-    tr
-      td ON DEMAND, CUSTOMIZED DRESS
-      td FREE 10 - 14 Business Days
-      td FREE 10 - 14 Business Days
-      td $30.00 7 – 10 Business Days
-    tr
-      td ON SALE
-      td $11.70 7 – 10 Business Days
-      td $11.70 7 – 10 Business Days
-      td $30.00 7 – 10 Business Days
+table.table
+  tr
+    th Subtotal Amount
+    th Australia
+    th Rest of World
+  tr
+    td $49.00 and over
+    td FREE 10 – 14 Business Days
+    td POA
+  tr
+    td Under $49.00
+    td $11.70 10 – 14 Business Days
+    td POA
