[chore][validation]: update fame chain based on validation

--- a/app/views/fame_chains/new.html.slim
+++ b/app/views/fame_chains/new.html.slim
@@ -3,7 +3,7 @@
     .page-title--details
       = image_tag '_famechain/title.png', width: 432, height: 146, alt: 'The Fame Chain'
 
-      p.text-center A network of fashion forward,</br>free thinking bloggers increasing their cred</br>through being linked.
+      p.text-center A network of fashion forward,<br>free thinking bloggers increasing their cred<br>through being linked.
 
 .page-content.thefamechain
   .container-fluid.call-to-actions
@@ -46,17 +46,17 @@
         li opportunity to be invited to co-design a formal dress.
         li 15% comission on every dress that one of your followers buys from our store
         li
-          |Opportunity to link to other blogs and&nbsp
+          |Opportunity to link to other blogs and&nbsp;
           span increase your own blogs visibility
         li
-          span a free&nbsp
+          span a free&nbsp;
           | dress gifted to you to style for each blogger with over 20k following.
         li Public endorsement of your blog as part of The Fame Chain.
         li Oppotunity to feature through our own social media channel and gain exposure.
         li VIP access to special discounts for you and your followers.
         li Access to a network of like-minded young women and content.
         li
-          span jumpstart&nbsp
+          span jumpstart&nbsp;
           | in your blogging, fashion and/or technology carer.
         li VIP access to our annual paid internship competition.
 
@@ -98,7 +98,7 @@
             = f.text_field :instagram, type: 'url'
         .col-md-3
             .form-group
-              label number of</br>Followers
+              label number of<br>Followers
               = f.text_field :instagram_size, type: 'text'
 
       .row
@@ -108,7 +108,7 @@
             = f.text_field :facebook, type: 'url'
         .col-md-3
             .form-group
-              label number of</br>followers
+              label number of<br>followers
               = f.text_field :facebook_size, type: 'text'
 
       .row
@@ -118,7 +118,7 @@
             = f.text_field :pinterest, type: 'url'
         .col-md-3
             .form-group
-              label.control-label number of</br>followers
+              label.control-label number of<br>followers
               = f.text_field :pinterest_size, type: 'text'
 
       .row
