[chore][validation]: update edits based on validation

--- a/app/views/landing_pages/amfam.html.slim
+++ b/app/views/landing_pages/amfam.html.slim
@@ -8,7 +8,7 @@
     div.i
       .slider-image-caption.height-100
         .container.height-100
-          h1.text-center.edit-title the wicked game</br> collection
+          h1.text-center.edit-title the wicked game<br> collection
 
     div.ii
       .slider-image-caption.height-100
