--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -9,7 +9,7 @@
     div.i
       .slider-image-caption.height-100
         .container.height-100
-          h1.text-center.edit-title.text-white our beautiful</br>bridesmaids collection
+          h1.text-center.edit-title.text-white our beautiful<br>bridesmaids collection
 
     div.ii
       .slider-image-caption.height-100
