--- a/app/views/landing_pages/prom.html.slim
+++ b/app/views/landing_pages/prom.html.slim
@@ -8,7 +8,7 @@
     div.i
       .slider-image-caption.height-100
         .container.height-100
-          h1.text-center.edit-title.text-white.prom-title our official</br>prom collection
+          h1.text-center.edit-title.text-white.prom-title our official<br>prom collection
 
     div.ii
       .slider-image-caption.height-100
