--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -13,94 +13,7 @@
 <% end %>
 
 <% content_for :table_filter do %>
-  <div data-hook="admin_orders_index_search" class="orders-filter">
-    <%= search_form_for [:admin, @search] do |f| %>
-      <div class="field-block alpha four columns">
-        <div class="date-range-filter field">
-          <%= label_tag nil, t(:date_range) %>
-          <div class="date-range-fields">
-            <%= f.text_field :created_at_gt, :class => 'datepicker datepicker-from', :value => params[:q][:created_at_gt], :placeholder => t(:start) %>
-
-            <span class="range-divider">
-              <i class="icon-arrow-right"></i>
-            </span>
-
-            <%= f.text_field :created_at_lt, :class => 'datepicker datepicker-to', :value => params[:q][:created_at_lt], :placeholder => t(:stop) %>
-          </div>
-        </div>
-
-        <div class="field state-select">
-          <%= label_tag nil, t(:status) %>
-          <%= f.select :state_eq, Spree::Order.state_machines[:state].states.collect {|s| [t("order_state.#{s.name}"), s.value]}, {:include_blank => true}, :class => 'select2' %>
-        </div>
-
-        <div class="field state-select">
-          <%= label_tag nil, t(:payment_status) %>
-          <%= f.select :payment_state_eq, %w[failed balance_due credit_owed paid], {:include_blank => true}, :class => 'select2' %>
-        </div>
-      </div>
-
-      <div class="six columns">
-        <div class="field">
-          <%= label_tag nil, t(:order_number) %>
-          <%= f.text_field :number_cont %>
-        </div>
-        <div class="field">
-          <%= label_tag nil, t(:email) %>
-          <%= f.email_field :email_cont %>
-        </div>
-      </div>
-
-      <div class="omega size columns">
-        <div class="field">
-          <%= label_tag nil, t(:first_name_begins_with) %>
-          <%= f.text_field :bill_address_firstname_start, :size => 25 %>
-        </div>
-        <div class="field">
-          <%= label_tag nil, t(:last_name_begins_with) %>
-          <%= f.text_field :bill_address_lastname_start, :size => 25%>
-        </div>
-      </div>
-
-      <div class="alpha four columns">
-        <% sorry = "HUH? The Order and it's Shipments can each be in a DIFFERENT STATE! Sorry" %>
-        <%= label_tag nil, t(:order_shipment_state) %><abbr title="<%= sorry %>"> ?</abbr>
-        <%= f.select :shipment_state_eq, Spree::Order.select(:shipment_state).uniq.pluck(:shipment_state).compact.collect { |s| [t("shipment_states.#{s}"), s] }, {:include_blank => true}, :class => 'select2' %>
-      </div>
-
-      <div class="four columns">
-        <%= label_tag nil, t(:shipments_status) %><abbr title="<%= sorry %>"> ?</abbr>
-        <%= f.select :shipments_state_eq, Spree::Shipment.state_machines[:state].states.collect { |s| [t("shipment_states.#{s.name}"), s.value] }, {:include_blank => true}, :class => 'select2' %>
-      </div>
-
-      <div class="four columns">
-        <div class="field checkbox">
-          <label>
-            <%= f.check_box :completed_at_not_null, {:checked => @show_only_completed}, '1', '' %>
-            <%= t(:show_only_complete_orders) %>
-          </label>
-        </div>
-      </div>
-
-      <div class="omega four columns">
-        <div class="field checkbox">
-          <label>
-            <%= f.check_box :inventory_units_shipment_id_null, {}, '1', '0' %>
-            <%= t(:show_only_unfulfilled_orders) %>
-          </label>
-        </div>
-      </div>
-
-      <div class="clearfix"></div>
-
-      <div class="actions filter-actions">
-        <div data-hook="admin_orders_index_search_buttons">
-          <%= button t(:filter_results), 'icon-search' %>
-          <%= button t(:export_as_csv), 'export-as-csv' %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+    <%= render partial: 'spree/admin/orders/index/table_filter' %>
 <% end %>
 
 <table class="index responsive" id="listing_orders" data-hook>
@@ -125,7 +38,9 @@
       <th><%= sort_link @search, :number,         t(:number, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :state,          t(:state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :payment_state,  t(:payment_state, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th>Make State</th>
+      <% unless hide_line_items %>
+        <th>Make State</th>
+      <% end %>
       <th><%= sort_link @search, :shipment_state, t(:shipment_state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :email,          t(:email, :scope => 'activerecord.attributes.spree/order') %></th>
       <th style="min-width:100px;"><%= sort_link @search, :customer_notes, 'Notes' %></th>
@@ -149,7 +64,9 @@
       <td><%= link_to order.number, admin_order_path(order) %></td>
       <td class="align-center"><span class="state <%= order.state.downcase %>"><%= t("order_state.#{order.state.downcase}") %></span></td>
       <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
-      <td></td>
+      <% unless hide_line_items %>
+          <td></td>
+      <% end %>
       <td class="align-center"><span class="state <%= order.shipment_state %>"><abbr title="<%=t("shipment_states.#{order.shipment_state}")%>"><%= link_to order.shipment_state, admin_order_shipments_path(order) if order.shipment_state %></abbr></span></td>
       <td><%= mail_to order.email %></td>
       <td><%= order.customer_notes %></td>
@@ -158,10 +75,9 @@
         <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
       </td>
     </tr>
-      <%= render 'spree/admin/orders/index/line_items', current_row_class: current_row_class, order: order %>
-
-
-
+      <% unless hide_line_items %>
+          <%= render 'spree/admin/orders/index/line_items', current_row_class: current_row_class, order: order %>
+      <% end %>
   <% end %>
   </tbody>
 </table>
