[copy][admin] shorter tab for celebs/bloggers

--- a/app/views/spree/admin/shared/_tabs.html.slim
+++ b/app/views/spree/admin/shared/_tabs.html.slim
@@ -5,5 +5,5 @@
 = tab :blog, :icon => 'icon-list', url: admin_blog_posts_path
 = tab :configurations, :general_settings, :mail_methods, :tax_categories, :zones, :states, :payment_methods, :inventory_settings, :taxonomies, :shipping_methods, :trackers, :label => 'config', :icon => 'icon-wrench', :url => spree.edit_admin_general_settings_path
 = tab :sales, icon: 'icon-money', url: admin_sales_path
-= tab :celebrities, icon: 'icon-list', :label => 'celebs/blogrs', url: admin_celebrities_path
+= tab :celebrities, icon: 'icon-list', :label => 'celebs', url: admin_celebrities_path
 
