[fix] [checkout] update states selector on country changes - removed site-wide chosen initialization [ some more code, but much easier to understand & change options ] - update states list for currently selected counry - show states text field if country has no states ( in our system )

--- a/app/views/blog/celebrities/show.html.slim
+++ b/app/views/blog/celebrities/show.html.slim
@@ -2,6 +2,11 @@
 = render partial: 'blog/shared/celebrity_popup'
 = render 'shared/breadcrumbs'
 
+javascript:
+  (function() {
+    $('.selectbox').chosen({ inherit_select_classes: true, disable_search: true})
+  })(document);
+
 .wrap.no-overflow
 
   .page-title.celebrity-title
