--- a/app/views/spree/checkout/_address_form.html.slim
+++ b/app/views/spree/checkout/_address_form.html.slim
@@ -63,10 +63,11 @@ ruby:
 
   .col-md-4.form-group
     = form.label :state, with_required_mark(t(:state))
-    select id=(field_id) name="#{form.object_name}[state_id]" class="form-control form-control-md selectbox #{ have_states ? 'required' : 'hidden' }" disabled=(!have_states)
-      option value='' data-country=''
-      - states.each do |state|
-        option selected=(address.state_id == state.id) style=(state.country_id == address.country_id ? '' : 'display: none;') value=(state.id) data-country=(state.country_id) = state.name
+    span.selectboxcontainer
+      select id=(field_id) name="#{form.object_name}[state_id]" class="form-control form-control-md selectbox #{ have_states ? 'required' : 'hidden' }" disabled=(!have_states)
+        option value='' data-country=''
+        - states.each do |state|
+          option selected=(address.state_id == state.id) style=(state.country_id == address.country_id ? '' : 'display: none;') value=(state.id) data-country=(state.country_id) = state.name
 
     = form.text_field(:state_name,
       :class => (!have_states ? 'required  form-control form-control-md' : 'hidden  form-control form-control-md'),
