--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -14,7 +14,7 @@ ruby:
     / br
     .row
       .col-md-6.form-group
-        = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
+        = link_to 'log in', login_path(return_to: spree.checkout_path), class: 'btn btn-block btn-black btn-md open-login-popup'
       .col-md-6.form-group
         = link_to 'Sign in with Facebook', fb_auth_path(return_to: 'checkout'), class: 'btn btn-facebook btn-block btn-black btn-md fb-login'
 
