[copy] Clarify shipping info in faqs and terms

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -12,7 +12,7 @@
         li.footer-nav--item
           = link_to 'About Us', about_us_path
         li.footer-nav--item
-          = link_to 'FAQs', faqs_path
+          = link_to 'FAQs & Shipping', faqs_path
 
     .col-md-2.col-sm-3
       ul.footer-nav
@@ -65,8 +65,8 @@
 /     p = link_to 'SIGN UP WITH YOUR EMAIL ADDRESS', '#', class: 'btn btn-block btn-white btn-md'
 /     p or
 /     p = link_to 'Sign UP USING Facebook', '#', class: 'btn btn-block btn-facebook btn-md'
-/     p 
-/       ' ALREADY A MEMBER? 
+/     p
+/       ' ALREADY A MEMBER?
 /       = link_to 'LOG IN HERE', '#'
 / coffee:
 /   $ ->
