--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -10,8 +10,53 @@
 
       h2 ABOUT US
       h3 Do you have any store locations?
-      p We are an online fashion boutique which means you can shop with us 24/7from Australia and United States but internationally, very soon!
-      p We are currently looking at cities to do pop up stores in, if you would like to see us have one at a location near you, email team@fameandpartners.com with your suggestion.
+      p
+        | We are an online fashion boutique which means you can shop with us 24/7from Australia and United States but internationally, very soon!
+        br
+        |We are currently looking at cities to do pop up stores in, if you would like to see us have one at a location near you, email team@fameandpartners.com with your suggestion.
+
+      h2 ORDERS
+
+      h3 I’m in love with something that is out of stock in my size/in my favourite #{t('words.color')}. What can I do?
+      p We can make to order! Simply make the purchase online and we will produce any item for you that is out of order. It will just take 7-10 business days for a made-to-order item as opposed to an item that is currently in stock.
+
+      h3 Can I cancel my order?
+      p If you would like to cancel your order, please email team@fameandpartners.com immediately with your cancellation request and order number.
+      p If your dress is customised we cannot accept cancellations after 24 hours of purchasing.
+      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund on your purchase and a 100% credit note for future purchases with Fame & Partners.
+
+      h3 How can I track my order?
+      p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section, which you can access when you are logged in. If you did not create a username/password or sign up when you purchased your dress, you will need to do so, to track your order.
+
+      h2 Shipping & Deliveries
+
+      h3 When will my order ship?
+      p Shipping times may vary due to availability of merchandise. If your item is in stock and you have not requested any customizations, your order will be dispatched within 2 business days of purchase. If your item is not in stock, or you have requested a customization, we will be making your dress, on demand, just for you! Please allow 2 weeks from the date of your purchase for production before your order is dispatched - a maximum of 10 business days for items out of stock and a maximum of 14 business days for orders with a customization.
+
+      p Please note: Orders are not shipped on the weekends or holidays.
+
+
+      h3 How long will it take for my order to arrive?
+      p Please refer to the table below to determine your shipping times:
+      p
+      table.table
+        tr
+          th Order Type
+          th Australia
+          th United States
+        tr
+          td IN STOCK
+          td 4 Business Days
+          td 5 Business Days
+        tr
+          td ON DEMAND, STANDARD DRESS
+          td 7 - 10 Business Days
+          td 7 - 10 Business Days
+        tr
+          td ON DEMAND, CUSTOMIZED DRESS
+          td 10 - 14 Business Days
+          td 10 - 14 Business Days
+      p
 
 
       h2 RETURNS
@@ -104,50 +149,3 @@
 
       h3 How long does it take to process my return?
       p Once we receive your package, your refund will be processed within 7 business days. You will be notified by email once the refund has been processed.
-
-
-      h2 ORDERS
-
-      h3 I’m in love with something that is out of stock in my size/in my favourite #{t('words.color')}. What can I do?
-      p We can make to order! Simply make the purchase online and we will produce any item for you that is out of order. It will just take 7-10 extra days for a made-to-order item as opposed to an item that is currently in stock.
-
-      h3 Can I cancel my order?
-      p If you would like to cancel your order, please email team@fameandpartners.com immediately with your cancellation request and order number.
-      p If your dress is customised we cannot accept cancellations after 24 hours of purchasing.
-      p If you wish to cancel your order outside of 24 hours, we can offer you a 50% refund on your purchase and a 100% credit note for future purchases with Fame & Partners.
-
-      h3 How can I track my order?
-      p As soon as your order ships, you will be provided with a tracking number via email. You can also find your order details and tracking information on the My Orders tab within the Account Settings section, which you can access when you are logged in. If you did not create a username/password or sign up when you purchased your dress, you will need to do so, to track your order.
-
-      h2 Deliveries
-
-      h3 When will my order ship?
-      p Shipping times may vary due to availability of merchandise. If your item is in stock and you have not requested any customizations, your order will be dispatched within 2 business days of purchase. If your item is not in stock, or you have requested a customization, we will be making your dress, on demand, just for you! Please allow 2 weeks from the date of your purchase for production before your order is dispatched - a maximum of 10 business days for items out of stock and a maximum of 14 business days for orders with a customization.
-
-      p Please note: Orders are not shipped on the weekends or holidays.
-
-
-      h3 How long will it take for my order to arrive?
-      p.feb-delivery
-        strong
-          ' Please note that delivery timeframes between the 14th and 28th of February 2015 will be 7-21 days
-      p Please refer to the table below to determine your shipping times:
-      p
-      table.table
-        tr
-          th Order Type
-          th Australia
-          th United States
-        tr
-          td IN STOCK
-          td 4 DAYS Business Days
-          td 5 DAYS Business Days
-        tr
-          td ON DEMAND, STANDARD DRESS
-          td 7 - 10 DAYS Business Days
-          td 7 - 10 DAYS Business Days
-        tr
-          td ON DEMAND, CUSTOMIZED DRESS
-          td 10 - 14 DAYS Business Days
-          td 10 - 14 DAYS Business Days
-      p
