--- a/app/views/spree/checkout/_address_form.html.slim
+++ b/app/views/spree/checkout/_address_form.html.slim
@@ -57,14 +57,19 @@ ruby:
 
   .col-md-4.form-group
     = form.label :country_id, with_required_mark(t(:country))
-    = form.collection_select :country_id, available_countries_for_current_zone, :id, :name, {}, {:class => 'required form-control form-control-md selectbox'}
+    select id=(country_field_id) name="#{form.object_name}[country_id]" class="form-control form-control-md selectbox"
+      - available_countries_for_current_zone.each do |country|
+        option selected=(address.country_id == country.id) value=(country.id) data-states-required=(country.states_required ? 'required' : nil)
+          = country.name
+    /= form.select :country_id, available_countries_for_current_zone, :id, :name, {}, {:class => 'required form-control form-control-md selectbox'}
 
-  .col-md-4.form-group
+  .col-md-4.form-group class=(address.country.states_required ? '' : 'hidden')
     = form.label :state, with_required_mark(t(:state))
-    select id=(field_id) name="#{form.object_name}[state_id]" class="form-control form-control-md selectbox #{ have_states ? 'required' : 'hidden' }" disabled=(!have_states)
-      option value='' data-country=''
-      - states.each do |state|
-        option selected=(address.state_id == state.id) style=(state.country_id == address.country_id ? '' : 'display: none;') value=(state.id) data-country=(state.country_id) = state.name
+    span.states_selector_container  class=(have_states ? 'required' : 'hidden')
+      select id=(field_id) name="#{form.object_name}[state_id]" class="form-control form-control-md selectbox" disabled=(!have_states)
+        option value='' data-country=''
+        - states.each do |state|
+          option selected=(address.state_id == state.id) style=(state.country_id == address.country_id ? '' : 'display: none;') value=(state.id) data-country=(state.country_id) = state.name
 
     = form.text_field(:state_name,
                       :class => !have_states ? 'required  form-control form-control-md' : 'hidden  form-control form-control-md',
