--- a/app/views/spree/admin/shared/_tabs.html.slim
+++ b/app/views/spree/admin/shared/_tabs.html.slim
@@ -1,9 +1,8 @@
 = tab :orders, :payments, :creditcard_payments, :shipments, :credit_cards, :return_authorizations, :icon => 'icon-shopping-cart'
 = tab :products , :option_types, :properties, :prototypes, :variants, :product_properties, :taxons, :icon => 'icon-th-large', :label => 'prods'
-- if !(request.path =~ /\/admin\/blog/)
+- if !(request.path =~ /\/admin\/blog/) && can?(:manage, :reports)
   = tab :reports, :icon => 'icon-file'
 = tab :blog, :icon => 'icon-list', url: admin_blog_posts_path
 = tab :configurations, :general_settings, :mail_methods, :tax_categories, :zones, :states, :payment_methods, :inventory_settings, :taxonomies, :shipping_methods, :trackers, :label => 'config', :icon => 'icon-wrench', :url => spree.edit_admin_general_settings_path
 = tab :sales, icon: 'icon-money', url: admin_sales_path
-= tab :celebrities, icon: 'icon-list', :label => 'celebs', url: admin_celebrities_path
-
+/ = tab :celebrities, icon: 'icon-list', :label => 'celebs', url: admin_celebrities_path
